@@ -6,6 +6,8 @@ HEAD
 		- 0001_add_conf_configureeventtable.pl
 		- 0002_add_conf_diskfree_watcher.pl
 	+ Remove migration script logs/0001_update_configurelogtable.pl
+	+ Bug fix: We don't use names to stringify date to avoid issues
+	  with DB insertions and localisation in event logging
 1.3.15
 	+ Bug fix: Call EBox::Global::sortModulesByDependencies when
 	  saving all modules and remove infinite loop in that method.
